yaml/downward-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: downard-pod
spec:
  containers:
    - name: main
      image: busybox
      command: ["sleep", "9999999"]
      resources:
        requests:
          cpu: 15m
          memory: 4Mi
