yaml/fortune-arg-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune-arg-pod
spec:
  containers:
    - name: html-generator
      image: sm123tt/fortune
      command: ["/bin/fortuneloop.sh"]
      args: ["30"]
      volumeMounts:
        - mountPath: /var/htdocs
          name: html
    - name: web-server
      image: nginx:alpine
      ports:
        - containerPort: 80
          protocol: TCP
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html
          readOnly: true
  volumes:
    - name: html
      emptyDir: {}
