yaml/fortune-config-vol-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune-config-vol-pod
spec:
  containers:
    - name: web-server
      image: nginx
      volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: config
          readOnly: true
        - mountPath: /usr/share/nginx/html
          name: html
          readOnly: true
      ports:
        - containerPort: 80
          protocol: TCP
    - name: html-generator
      image: sm123tt/fortune
      volumeMounts:
        - mountPath: /var/htdocs
          name: html
  volumes:
    - name: html
      emptyDir: {}
    - name: config
      configMap:
        name: fortune-config
