yaml/fortune-env-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune-pod
spec:
  containers:
    - name: web-server
      image: nginx/alpine
      command:
        - "/bin/fortuneloop.sh"
      volumeMounts:
        - mountPath: /var/share/nginx/html
          name: html
          readOnly: true
      ports:
        - containerPort: 80
          protocol: TCP
    - name: html-generator
      image: sm123tt/fortune
      volumeMounts:
        - mountPath: /var/htdocs
          name: html
  volumes:
    - name: html
      emptyDir: {}
