yaml/kubia.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual
  labels:
    creation_method: manual
    env: dev
  annotations:
    kubernetes.io/created-by: | 
      { 
        "kind": "SerializedReference", 
        "apiVersion:": "vi1", 
        "reference": {
          "kind": "ReplicationController", 
          "namespace": "default"
        }
      }
spec:
  containers:
  - image: sm123tt/kubia
    name: kubia
    ports:
      - name: http
        containerPort: 8080
        protocol: TCP
      - name: https
        containerPort: 8443
        protocol: TCP
    livenessProbe:
      httpGet:
        path: /
        port: 8080
      initialDelaySeconds: 15
        # will wat 15 seconds before executing the first probe
