yaml/mongodb-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
spec:
  containers:
    - name: mongo
      image: mongo
      volumeMounts:
        - mountPath: /data/db
          name: mongodb-disk
      ports:
        - containerPort: 27017
          protocol: TCP
  volumes:
    - name: mongodb-disk
      hostPath:
        path: /data/db
