yaml/mongodb-pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
spec:
  containers:
    - name: mongodb
      image: mongo
      volumeMounts:
        - mountPath: /data/db
          name: mongodb-data
      ports:
        - containerPort: 27017
          protocol: TCP
  volumes:
    - name: mongodb-data
      persistentVolumeClaim:
        claimName: mongodb-pvc
