yaml/kubia-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-svc-lb
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubia
