yaml/kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-svc-nodeport
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30123
  selector:
    app: kubia
