yaml/kubia-v1-rc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  type: NodePort
  selector:
    app: kubia
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30123
